--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "guzzlehttp/guzzle": "^6.2",
+        "php": ">=7.0.0",
+        "guzzlehttp/guzzle": "^6.3",
         "illuminate/notifications": "^5.3",
         "illuminate/support": "^5.1|^5.2|^5.3"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "4.*"
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "psr-4": {
