--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,19 @@
 {
-    "name": "siemen6/discord-webhook",
-    "description": "Discord Webhook notifications channel for Laravel 5.3",
-    "homepage": "https://github.com/siemen6/discord-webhook",
+    "name": "ccoeder/discord-webhook",
+    "description": "Discord Webhook notifications channel for Laravel 5.8",
+    "homepage": "https://github.com/ccoeder/discord-webhook",
     "license": "MIT",
     "authors": [
         {
-            "name": "Siemen Rotensen",
-            "email": "rotensen.s@gmail.com",
-            "homepage": "https://github.com/siemen6",
-            "role": "Developer"
-        },
-        {
-            "name": "Dr. Dr. Jojo",
-            "email": "drdrjojo2k@gmail.com",
-            "homepage": "https://github.com/drdrjojo",
-            "role": "Developer"
+            "name": "H. Can Yildirim",
+            "email": "huseyincanyildirim@outlook.com.tr"
         }
     ],
     "require": {
         "php": ">=7.0.0",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/notifications": "^5.3",
-        "illuminate/support": "^5.1|^5.2|^5.3"
+        "illuminate/notifications": "5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
